--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         </a>
     </div>
 
+    <input type="checkbox" id="check">
+    <label for="check" class="container">
+      <div class="check_label">
+        <div class="effect"></div>
+      </div>
+      <h1>Check me!</h1>
+    </label>
+
   <section id="contact">
     <div class="overlay">
       <div class="containers">
